--- a/Client_App/Views/Forms/Forms1/Form_11.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_11.axaml
@@ -10,7 +10,6 @@
 	xmlns:interactivity="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
     xmlns:forms1="clr-namespace:Models.Forms.Form1;assembly=Models"
     xmlns:forms="clr-namespace:Models.Forms;assembly=Models"
-	xmlns:behaviors="using:Avalonia.Xaml.Interactions.Core"
 	xmlns:controls="clr-namespace:Client_App.Controls"
     Title="{Binding WindowTitle}"
     d:DesignHeight="450"
@@ -43,17 +42,21 @@
 			<RowDefinition Height="Auto"/>
 		</Grid.RowDefinitions>
 
+		<!-- #region Верхний блок данных -->
+		
 		<Expander Grid.Row ="0"
 				  IsExpanded="True"
                   Header="Скрыть/Раскрыть верхнюю панель">
 			<WrapPanel Classes="header">
+
+				<!-- #region Отчёт -->
+				
 				<Border Classes="borderContainer">
-					<controls:SelectReportPopup
-						Grid.Row="1"
-						DataContext="{Binding SelectReportPopupVM}"
-						HorizontalAlignment="Center"
-						VerticalAlignment="Center"/>
+					<controls:SelectReportPopup DataContext="{Binding SelectReportPopupVM}"
+												HorizontalAlignment="Center"
+												VerticalAlignment="Center"/>
 				</Border>
+
 				<Border Classes="borderContainer">
 					<Grid RowDefinitions="*,*,*,*,*" Margin="5">
 
@@ -70,34 +73,49 @@
 								                SelectedDate="{Binding Report.StartPeriod.Value, Converter={StaticResource DateConverter}}"/>
 						</Grid>
 
-						<Grid ColumnDefinitions="*,*,*"  Grid.Row="1">
+						<Grid ColumnDefinitions="*,*,*" Grid.Row="1">
 							<TextBlock Grid.Column="0"
 									   Margin="5,13"
 									   Text="Дата окончания настоящего отчетного периода:"/>
 							<TextBox Grid.Column="1"
 									 Margin="11,3,0,0"
+                                     MinWidth="83"
 									 Text="{Binding Report.EndPeriod.Value}"
 									 Watermark="дд.мм.гггг"/>
 							<CalendarDatePicker Classes="buttonOnly"
 								                Grid.Column="2"
-								                SelectedDate="{Binding Report.EndPeriod.Value, Converter={StaticResource DateConverter}}"								/>
+								                SelectedDate="{Binding Report.EndPeriod.Value, Converter={StaticResource DateConverter}}"/>
 						</Grid>
 
 						<StackPanel  Orientation="Horizontal" Grid.Row="2">
-							<TextBlock Margin="5">Номер корректировки:</TextBlock>
-							<TextBox Margin="5" Width="75"
-								Text="{Binding Path=Report.CorrectionNumber.Value}"></TextBox>
+							<TextBlock Margin="5,10"
+                                       Text="Номер корректировки:"/>
+							<TextBox Margin="5" 
+                                     Width="75" 
+                                     Text="{Binding Path=Report.CorrectionNumber.Value}"/>
 						</StackPanel>
 
 						<StackPanel Orientation="Horizontal" Grid.Row="3">
-							<Button Margin="5" Command="{Binding CheckForm}">Проверить</Button>
-							<Button Margin="5" Command="{Binding SaveReport}">Сохранить</Button>
+							<Button Margin="5" 
+                                    Command="{Binding CheckForm}" 
+                                    Content="Проверить"/>
+							<Button Margin="5" 
+                                    Command="{Binding SaveReport}" 
+                                    Content="Сохранить"/>
 						</StackPanel>
+						
 					</Grid>
 				</Border>
+				
+				<!-- #endregion Отчёт -->
 
+				<!-- #region Исполнитель -->
+				
 				<Border Classes="borderContainer">
-					<Grid Margin="5" RowDefinitions ="*,*,*,*,*" ColumnDefinitions="*,2*">
+					<Grid Margin="5" 
+						  RowDefinitions ="*,*,*,*,*" 
+						  ColumnDefinitions="*,2*">
+						
 						<TextBlock Grid.Row="0"
 								   Grid.Column="0"
 								   Margin="5"
@@ -113,7 +131,7 @@
 						<TextBox Grid.Row="1"
 								 Grid.Column="1"
 								 Margin="5"
-								Text="{Binding Path=Report.GradeExecutor.Value}"/>
+								 Text="{Binding Path=Report.GradeExecutor.Value}"/>
 						<TextBlock Grid.Row="2"
 								   Grid.Column="0"
 								   Margin="5"
@@ -138,26 +156,42 @@
 								Content="Скопировать данные предыдущей формы"/>
 					</Grid>
 				</Border>
+				
+				<!-- #endregion Исполнитель -->
+
+				<!-- #region Дополнительные функции -->
+				
 				<Border Classes="borderContainer">
 					<Grid Margin="5" RowDefinitions="Auto,Auto">
 
-						<Button Grid.Row="0" Command="{Binding SourceTransmissionAll}"> Перевести все РВ в РАО</Button>
+						<Button Grid.Row="0" 
+								Command="{Binding SourceTransmissionAll}" 
+								Content="Перевести все РВ в РАО"/>
 
 						<StackPanel Grid.Row="1" Orientation="Horizontal">
-							<TextBlock Margin="5" >Автозаполнение:</TextBlock>
-							<CheckBox Margin="5" IsChecked="{Binding IsAutoReplaceEnabled}"></CheckBox>
+							<TextBlock Margin="5" Text="Автозаполнение:"/>
+							<CheckBox Margin="5" IsChecked="{Binding IsAutoReplaceEnabled}"/>
 						</StackPanel>
+						
 					</Grid>
 				</Border>
+				
+				<!-- #endregion Дополнительные функции -->
 
 			</WrapPanel>
 		</Expander>
 
-		<ScrollViewer Classes="tableScrollViewer" Grid.Row="1">
+		<!-- #endregion Верхний блок данных -->
 
-            <Grid x:Name="Table" RowDefinitions="Auto,*" ColumnDefinitions="Auto">
-                <Grid.ContextMenu>
-                    <ContextMenu x:CompileBindings="True"
+		<!-- #region Таблица -->
+		
+		<ScrollViewer Classes="tableScrollViewer" Grid.Row="1">
+			<Grid x:Name="Table" RowDefinitions="Auto,*" ColumnDefinitions="Auto">
+
+				<!-- #region Контекстное меню-->
+				
+				<Grid.ContextMenu>
+					<ContextMenu x:CompileBindings="True"
                                  x:DataType="vm:Form_11VM"
                                  DataContext="{Binding DataContext, ElementName=dataGrid}">
 						<MenuItem Header="Выделить всё"
@@ -233,16 +267,22 @@
 						</MenuItem>
 					</ContextMenu>
 				</Grid.ContextMenu>
-				<Grid Classes="tableHeader" Grid.Row="0"
+				
+				<!-- #endregion Контекстное меню-->
+
+				<!-- #region Заголовки таблицы -->
+				
+				<Grid Classes="tableHeader" 
+					  Grid.Row="0"
 					  Width="{Binding ElementName=dataGrid.Width}"
-                      ColumnDefinitions="*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*"
+					  ColumnDefinitions="*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*"
 					  RowDefinitions="Auto,Auto">
 
 					<interactivity:Interaction.Behaviors>
 						<local:ColumnWidthSyncBehavior SourceDataGrid="{Binding ElementName=dataGrid}"/>
 					</interactivity:Interaction.Behaviors>
 
-					<!--Первый уровень заголовков-->
+					<!-- #region Первый уровень заголовков -->
 
 					<Border Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"  BorderThickness="1,1,1,0">
 						<TextBlock>№ п/п</TextBlock>
@@ -266,7 +306,9 @@
 						<TextBlock>Прибор (установка), УКТ или иная упаковка</TextBlock>
 					</Border>
 
-					<!--Второй уровень заголовков-->
+					<!-- #endregion Первый уровень заголовков -->
+
+					<!-- #region Второй уровень заголовков -->
 
 					<Border Grid.Column="0" Grid.Row="1" BorderThickness="1,0,1,1">
 						<TextBlock></TextBlock>
@@ -337,29 +379,37 @@
 					<Border Grid.Column="22" Grid.Row="1">
 						<TextBlock>номер</TextBlock>
 					</Border>
-				</Grid>
 
-				<DataGrid
-                    Grid.Row="1"
-					Classes="table"
-					x:CompileBindings="True"
-					x:Name="dataGrid"
-					CanUserSortColumns="True"
-					CanUserReorderColumns="False"
-					Items="{Binding FormList}"
-					SelectedItem="{Binding SelectedForm}"
-					ColumnWidth="125">
+					<!-- #endregion Второй уровень заголовков -->
+
+				</Grid>
+				
+				<!-- #endregion Заголовки таблицы -->
+
+				<!-- #region DataGrid -->
+				
+				<DataGrid	Grid.Row="1"
+									Classes="table"
+									x:CompileBindings="True"
+									x:Name="dataGrid"
+									CanUserSortColumns="True"
+									CanUserReorderColumns="False"
+									Items="{Binding FormList}"
+									SelectedItem="{Binding SelectedForm}"
+									ColumnWidth="125">
 
 					<interactivity:Interaction.Behaviors>
 						<local:DataGridColumnWidthLoadBehavior FormNum="1.1"/>
 						<local:DataGridPointerBehavior/>
 						<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						<local:DeselectDataGridOnClickOutsideBehavior/>
-                        <local:DataGridEditingStateBehavior IsEditing="{Binding DataGridIsEditing, Mode=TwoWay}"/>
+						<local:DataGridEditingStateBehavior IsEditing="{Binding DataGridIsEditing, Mode=TwoWay}"/>
 					</interactivity:Interaction.Behaviors>
 
+					<!-- #region Колонки-->
+
 					<DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding NumberInOrder.Value}"
+						<DataGridTextColumn Binding="{Binding NumberInOrder.Value}"
 											Width="40"
 											IsReadOnly="True"
 											x:DataType="forms1:Form11">
@@ -765,10 +815,20 @@
 						</DataGridTemplateColumn>
 
 					</DataGrid.Columns>
+
+					<!-- #endregion Колонки-->
+
 				</DataGrid>
+				
+				<!-- #endregion DataGrid -->
+				
 			</Grid>
 		</ScrollViewer>
+		
+		<!-- #endregion Таблица -->
 
+		<!-- #region Выбор страницы -->
+		
 		<Border Grid.Row="2" Classes="pageControlContainer">
 			<Grid RowDefinitions="Auto,Auto"
 				  ColumnDefinitions="Auto,Auto,Auto,Auto">
@@ -821,10 +881,14 @@
 			</Grid>
 		</Border>
 		
+		<!-- #endregion Выбор страницы -->
+
+		<!-- #region Примечания -->
+		
 		<Expander Grid.Row ="3"
-				  IsExpanded="True"
-				  ExpandDirection="Up"
-                  Header="Скрыть/Раскрыть нижнюю панель">
+						  IsExpanded="True"
+						  ExpandDirection="Up"
+						  Header="Скрыть/Раскрыть нижнюю панель">
 			<Border Classes="notesContainer">
 				<StackPanel>
 					<StackPanel.ContextMenu>
@@ -886,5 +950,8 @@
 				</StackPanel>
 			</Border>
 		</Expander>
+		
+		<!-- #endregion Примечания -->
+		
 	</Grid>
 </Window>
