--- a/Client_App/Views/Forms/Forms1/Form_13.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_13.axaml
@@ -10,7 +10,6 @@
 	xmlns:interactivity="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
     xmlns:forms1="clr-namespace:Models.Forms.Form1;assembly=Models"
     xmlns:forms="clr-namespace:Models.Forms;assembly=Models"
-	xmlns:behaviors="using:Avalonia.Xaml.Interactions.Core"
 	xmlns:controls="clr-namespace:Client_App.Controls"
     Title="{Binding WindowTitle}"
     d:DesignHeight="450"
@@ -42,13 +41,17 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-		<Expander Grid.Row ="0"
-				  IsExpanded="True" 
+		<!-- #region Верхний блок данных -->
+        
+        <Expander Grid.Row ="0"
+                  IsExpanded="True"
                   Header="Скрыть/Раскрыть верхнюю панель">
-            <WrapPanel Classes="header">
+			<WrapPanel Classes="header">
+
+				<!-- #region Отчёт -->
+				
 				<Border Classes="borderContainer">
 					<controls:SelectReportPopup
-						Grid.Row="1"
 						DataContext="{Binding SelectReportPopupVM}"
 						HorizontalAlignment="Center"
 						VerticalAlignment="Center"/>
@@ -66,10 +69,11 @@
 									 Watermark="дд.мм.гггг"/>
 							<CalendarDatePicker	Classes="buttonOnly"
 								                Grid.Column="2"
-								                SelectedDate="{Binding Report.StartPeriod.Value, Converter={StaticResource DateConverter}}"/>
+								                SelectedDate="{Binding Report.StartPeriod.Value, 
+												    Converter={StaticResource DateConverter}}"/>
 						</Grid>
 
-						<Grid ColumnDefinitions="*,*,*"  Grid.Row="1">
+						<Grid ColumnDefinitions="*,*,*" Grid.Row="1">
 							<TextBlock Grid.Column="0"
 									   Margin="5,13"
 									   Text="Дата окончания настоящего отчетного периода:"/>
@@ -79,24 +83,34 @@
 									 Watermark="дд.мм.гггг"/>
 							<CalendarDatePicker Classes="buttonOnly"
 								                Grid.Column="2"
-								                SelectedDate="{Binding Report.EndPeriod.Value, Converter={StaticResource DateConverter}}"								/>
+								                SelectedDate="{Binding Report.EndPeriod.Value, 
+												    Converter={StaticResource DateConverter}}"								/>
 						</Grid>
 
-						<StackPanel  Orientation="Horizontal" Grid.Row="2">
-							<TextBlock Margin="5">Номер корректировки:</TextBlock>
-							<TextBox Margin="5" Width="75"
-								Text="{Binding Path=Report.CorrectionNumber.Value}"></TextBox>
+						<StackPanel Orientation="Horizontal" Grid.Row="2">
+							<TextBlock Margin="5" Text="Номер корректировки:"/>
+							<TextBox Margin="5"
+                                     Width="75"
+                                     Text="{Binding Path=Report.CorrectionNumber.Value}"></TextBox>
 						</StackPanel>
 
 						<StackPanel Orientation="Horizontal" Grid.Row="3">
-							<Button Margin="5" Command="{Binding CheckForm}">Проверить</Button>
-							<Button Margin="5" Command="{Binding SaveReport}">Сохранить</Button>
+							<Button Margin="5" 
+                                    Command="{Binding CheckForm}" 
+                                    Content="Проверить"/>
+							<Button Margin="5" 
+                                    Command="{Binding SaveReport}" 
+                                    Content="Сохранить"/>
 						</StackPanel>
 
 					</Grid>
 				</Border>
 
-				<Border Classes="borderContainer">
+                <!-- #endregion Отчёт -->
+
+				<!-- #region Исполнитель -->
+                
+                <Border Classes="borderContainer">
 					<Grid Margin="5" RowDefinitions ="*,*,*,*,*" ColumnDefinitions="*,2*">
 						<TextBlock Grid.Row="0"
 								   Grid.Column="0"
@@ -138,86 +152,99 @@
 								Content="Скопировать данные предыдущей формы"/>
 					</Grid>
 				</Border>
+				
+                <!-- #endregion Исполнитель -->
+
+				<!-- #region Дополнительные функции -->
 
 				<Border Classes="borderContainer">
 					<Grid Margin="5" RowDefinitions="Auto,Auto">
 
-						<Button Grid.Row="0" Command="{Binding SourceTransmissionAll}"> Перевести все РВ в РАО</Button>
+						<Button Grid.Row="0" 
+                                Command="{Binding SourceTransmissionAll}" 
+                                Content="Перевести все РВ в РАО"/>
 
 						<StackPanel Grid.Row="1" Orientation="Horizontal">
-							<TextBlock Margin="5" >Автозаполнение:</TextBlock>
-							<CheckBox Margin="5" IsChecked="{Binding IsAutoReplaceEnabled}"></CheckBox>
+							<TextBlock Margin="5" Text="Автозаполнение:"/>
+							<CheckBox Margin="5" IsChecked="{Binding IsAutoReplaceEnabled}"/>
 						</StackPanel>
 					</Grid>
 				</Border>
+
+                <!-- #endregion Дополнительные функции -->
+
 			</WrapPanel>
 		</Expander>
+		
+        <!-- #endregion Верхний блок данных -->
 
-		<ScrollViewer Classes="tableScrollViewer" Grid.Row="1">
+		<!-- #region Таблица -->
+        
+        <ScrollViewer Classes="tableScrollViewer" Grid.Row="1">
 			<Grid x:Name="Table" RowDefinitions="Auto,*" ColumnDefinitions="Auto">
 				<Grid.ContextMenu>
-                    <ContextMenu x:CompileBindings="True"
+					<ContextMenu x:CompileBindings="True"
                                  x:DataType="vm:Form_13VM"
                                  DataContext="{Binding DataContext, ElementName=dataGrid}">
-                        <MenuItem Header="Выделить всё"
+						<MenuItem Header="Выделить всё"
                                   Command="{Binding SelectAll}"
                                   IsHitTestVisible="True"
                                   InputGesture="Ctrl+A"/>
-                        <MenuItem Header="Добавить строку"
+						<MenuItem Header="Добавить строку"
                                   Command="{Binding AddRow}"
                                   InputGesture="Ctrl+T"/>
-                        <MenuItem Header="Добавить N строк"
+						<MenuItem Header="Добавить N строк"
                                   Command="{Binding AddRows}"
                                   InputGesture="Ctrl+N"/>
-                        <MenuItem Header="Добавить N строк перед"
+						<MenuItem Header="Добавить N строк перед"
                                   Command="{Binding AddRowsIn}"
                                   CommandParameter="{Binding SelectedForms}"
                                   InputGesture="Ctrl+I"
                                   IsVisible="{Binding AnyRowSelected}"/>
-                        <MenuItem Header="Копировать"
+						<MenuItem Header="Копировать"
                                   Command="{Binding CopyRows}"
                                   CommandParameter="{Binding SelectedForms}"
                                   InputGesture="Ctrl+C"
                                   IsVisible="{Binding AnyRowSelected}"/>
-                        <MenuItem Header="Вставить"
+						<MenuItem Header="Вставить"
                                   Command="{Binding PasteRows}"
                                   InputGesture="Ctrl+V"
                                   IsVisible="{Binding AnyRowSelected}"/>
-                        <MenuItem Header="Удалить выбранные строчки"
+						<MenuItem Header="Удалить выбранные строчки"
                                   Command="{Binding DeleteRows}"
                                   CommandParameter="{Binding SelectedForms}"
                                   InputGesture="Ctrl+D"
                                   IsVisible="{Binding AnyRowSelected}"/>
-                        <MenuItem Header="Выставить номер"
+						<MenuItem Header="Выставить номер"
                                   Command="{Binding SetNumberOrder}"
                                   InputGesture="Ctrl+O"/>
-                        <!--<MenuItem Header="Сортировать по номеру п/п	Ctrl+L"
+						<!--<MenuItem Header="Сортировать по номеру п/п	Ctrl+L"
                                       Command="{Binding SortForms}"
                                       HotKey="Ctrl+L"/> -->
-                        <MenuItem Header="Очистить строчки"
+						<MenuItem Header="Очистить строчки"
                                   Command="{Binding DeleteDataInRows}"
                                   CommandParameter="{Binding SelectedForms}"
                                   InputGesture="Ctrl+U"
                                   IsVisible="{Binding AnyRowSelected}"/>
-                        <MenuItem Header="Перевести РВ в РАО"
+						<MenuItem Header="Перевести РВ в РАО"
                                   Command="{Binding SourceTransmission}"
                                   CommandParameter="{Binding SelectedForm}"
                                   InputGesture="Ctrl+J">
-                            <MenuItem.IsVisible>
-                                <MultiBinding Converter="{StaticResource Op41AndOneSelectedConverter}">
-                                    <Binding Path="OnlyOneRowSelected"/>
-                                    <Binding Path="SelectedForm"/>
-                                </MultiBinding>
-                            </MenuItem.IsVisible>
-                        </MenuItem>
-                    </ContextMenu>
+							<MenuItem.IsVisible>
+								<MultiBinding Converter="{StaticResource Op41AndOneSelectedConverter}">
+									<Binding Path="OnlyOneRowSelected"/>
+									<Binding Path="SelectedForm"/>
+								</MultiBinding>
+							</MenuItem.IsVisible>
+						</MenuItem>
+					</ContextMenu>
 				</Grid.ContextMenu>
 				<Grid Classes="tableHeader" Grid.Row="0"
 					  Width="{Binding ElementName=dataGrid.Width}"
                       ColumnDefinitions="*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*"
                   RowDefinitions="Auto,Auto" >
 
-                    <interactivity:Interaction.Behaviors>
+					<interactivity:Interaction.Behaviors>
 						<local:ColumnWidthSyncBehavior	SourceDataGrid="{Binding ElementName=dataGrid}"/>
 					</interactivity:Interaction.Behaviors>
 
@@ -320,7 +347,7 @@
 					Items="{Binding FormList}"
 					SelectedItem="{Binding SelectedForm}"
 					ColumnWidth="125">
-					
+
 					<interactivity:Interaction.Behaviors>
 						<local:DataGridColumnWidthLoadBehavior FormNum="1.3"/>
 						<local:DataGridPointerBehavior/>
@@ -705,64 +732,73 @@
 				</DataGrid>
 			</Grid>
 		</ScrollViewer>
+		
+        <!-- #endregion Таблица -->
 
-		<Border Grid.Row="2"
-				Classes="pageControlContainer">
+		<!-- #region Выбор страницы -->
+        
+        <Border Grid.Row="2"
+                Classes="pageControlContainer">
 			<Grid RowDefinitions="Auto,Auto"
 				  ColumnDefinitions="Auto,Auto,Auto,Auto">
-				<TextBlock Text="Текущая страница" 
-						   Grid.Row="0" 
-						   Grid.Column="0" 
+				<TextBlock Text="Текущая страница"
+						   Grid.Row="0"
+						   Grid.Column="0"
 						   Margin="5"/>
-				
-				<NumericUpDown Value="{Binding CurrentPage}" 
-							   Increment="-1" 
-							   Grid.Row="0" 
-							   Grid.Column="1" 
+
+				<NumericUpDown Value="{Binding CurrentPage}"
+							   Increment="-1"
+							   Grid.Row="0"
+							   Grid.Column="1"
 							   Margin="5">
 					<interactivity:Interaction.Behaviors>
 						<local:NumericUpDownDigitValidationBehavior/>
 					</interactivity:Interaction.Behaviors>
 				</NumericUpDown>
-				
-				<TextBlock Text ="Кол-во страниц:" 
-						   Grid.Row="0" 
+
+				<TextBlock Text ="Кол-во страниц:"
+						   Grid.Row="0"
 						   Grid.Column="2"
 						   Margin="5"/>
-				<TextBlock Text="{Binding TotalPages}" 
-						   Grid.Row="0" 
-						   Grid.Column="3" 
+				<TextBlock Text="{Binding TotalPages}"
+						   Grid.Row="0"
+						   Grid.Column="3"
 						   Margin="5"/>
-				<TextBlock Text="Кол-во строчек на странице" 
-						   Grid.Row="1" 
-						   Grid.Column="0" 
+				<TextBlock Text="Кол-во строчек на странице"
+						   Grid.Row="1"
+						   Grid.Column="0"
 						   Margin="5"/>
-				
-				<NumericUpDown Value="{Binding RowCount}" 
-							   Minimum="1" 
-							   Grid.Row="1" 
-							   Grid.Column="1" 
+
+				<NumericUpDown Value="{Binding RowCount}"
+							   Minimum="1"
+							   Grid.Row="1"
+							   Grid.Column="1"
 							   Margin="5">
 					<interactivity:Interaction.Behaviors>
 						<local:NumericUpDownDigitValidationBehavior/>
 					</interactivity:Interaction.Behaviors>
 				</NumericUpDown>
-				
-				<TextBlock Text="Всего строчек:" 
-						   Grid.Row="1" 
-						   Grid.Column="2" 
+
+				<TextBlock Text="Всего строчек:"
+						   Grid.Row="1"
+						   Grid.Column="2"
 						   Margin="5"/>
 				<TextBlock Text="{Binding TotalRows}"
-						   Grid.Row="1" 
-						   Grid.Column="3" 
+						   Grid.Row="1"
+						   Grid.Column="3"
 						   Margin="5"/>
 			</Grid>
 		</Border>
-		<Expander Grid.Row ="3"
-				  IsExpanded="True"
-				  ExpandDirection="Up" 
+
+		<!-- #endregion Выбор страницы -->
+
+		<!-- #region Примечания -->
+
+        <Expander Grid.Row ="3"
+                  IsExpanded="True"
+                  ExpandDirection="Up"
                   Header="Скрыть/Раскрыть нижнюю панель">
-            <Border  Classes="notesContainer">
+			<Border  Classes="notesContainer">
 				<StackPanel>
 					<StackPanel.ContextMenu>
 						<ContextMenu>
@@ -821,5 +857,8 @@
 				</StackPanel>
 			</Border>
 		</Expander>
+		
+        <!-- #endregion Примечания -->
+
 	</Grid>
 </Window>
