--- a/Client_App/Views/Forms/Forms1/Form_16.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_16.axaml
@@ -3,7 +3,7 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:behaviors="using:Avalonia.Xaml.Interactions.Core"
-    xmlns:controls="clr-namespace:Client_App.Controls"
+    xmlns:controls="clr-namespace:Client_App.Views.Controls"
     xmlns:converter="clr-namespace:Client_App.VisualRealization.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:forms="clr-namespace:Models.Forms;assembly=Models"
