--- a/Client_App/Views/Forms/Forms2/Form_25.axaml
+++ b/Client_App/Views/Forms/Forms2/Form_25.axaml
@@ -241,115 +241,58 @@
                         Grid.Row="0"
                         Grid.RowSpan="2"
                         Grid.Column="1"
-                        Grid.ColumnSpan="4">
-                        <TextBlock Text="Установки переработки"/>
+                        Grid.ColumnSpan="2">
+                        <TextBlock Text="Пункт хранения ОЯТ"/>
                     </Border>
                     <Border
                         Grid.Row="0"
-                        Grid.Column="5"
-                        Grid.ColumnSpan="9">
-                        <TextBlock Text="Поступило РАО на переработку, кондиционирование"/>
-                    </Border>
-                    <Border
-                        Grid.Row="0"
-                        Grid.Column="14"
-                        Grid.ColumnSpan="9">
-                        <TextBlock Text="Образовалось РАО после переработки, кондиционирования"/>
+                        Grid.Column="3"
+                        Grid.ColumnSpan="7">
+                        <TextBlock Text="Наличие на конец отчетного года"/>
                     </Border>
 
                     <!--#endregion Второй уровень заголовков-->
 
                     <Border
                         Grid.Row="1"
-                        Grid.Column="7"
-                        Grid.ColumnSpan="3">
-                        <TextBlock Text="количество"/>
+                        Grid.Column="5"
+                        Grid.ColumnSpan="2">
+                        <TextBlock Text="масса ОЯТ, т"/>
                     </Border>
 					<Border
                         Grid.Row="1"
-                        Grid.Column="10"
-                        Grid.ColumnSpan="4">
+                        Grid.Column="8"
+                        Grid.ColumnSpan="2">
                         <TextBlock Text="Суммарная активность, Бк"/>
-                    </Border>
-					<Border
-                        Grid.Row="1"
-                        Grid.Column="16"
-                        Grid.ColumnSpan="3">
-                        <TextBlock Text="количество"/>
-                    </Border>
-					<Border
-                        Grid.Row="1"
-                        Grid.Column="19"
-                        Grid.ColumnSpan="4">
-                        <TextBlock Text="суммарная активность, Бк"/>
                     </Border>
                     <!--#region Третий уровень заголовков-->
 
                     <Border Grid.Row="2" Grid.Column="1">
-                        <TextBlock Text="наименование"/>
+                        <TextBlock Text="наименование, номер"/>
                     </Border>
                     <Border Grid.Row="2" Grid.Column="2">
                         <TextBlock Text="код"/>
                     </Border>
-                    <Border Grid.Row="2" Grid.Column="3">
-                        <TextBlock Text="мощность, куб. м/год"/>
+                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="3">
+                        <TextBlock Text="Код ОЯТ"/>
                     </Border>
-                    <Border Grid.Row="2" Grid.Column="4">
-                        <TextBlock Text="количество часов работы за год"/>
+                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="4">
+                        <TextBlock Text="номер мероприятия ФЦП"/>
                     </Border>
-                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="5">
-                        <TextBlock Text="код РАО"/>
+                    <Border Grid.Row="2" Grid.Column="5">
+                        <TextBlock Text="топлива (нетто)"/>
                     </Border>
-                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="6">
-                        <TextBlock Text="статус РАО"/>
+                    <Border Grid.Row="2" Grid.Column="6">
+                        <TextBlock Text="ОТВС (ТВЭЛ, выемной части реактора) брутто"/>
                     </Border>
-                    <Border Grid.Row="2" Grid.Column="7">
-                        <TextBlock Text="объем без упаковки, куб. м"/>
+                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="7">
+                        <TextBlock Text="количество, шт"/>
                     </Border>
                     <Border Grid.Row="2" Grid.Column="8">
-                        <TextBlock Text="масса без упаковки (нетто), т"/>
+                        <TextBlock Text="альфа-излучающих нуклидов"/>
                     </Border>
                     <Border Grid.Row="2" Grid.Column="9">
-                        <TextBlock Text="ОЗИИИ, шт"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="10">
-                        <TextBlock Text="тритий"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="11">
-                        <TextBlock Text="бета-, гамма-излучающие радионуклиды (исключая тритий)"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="12">
-                        <TextBlock Text="альфа-излучающие радионуклиды (исключая трансурановые)"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="13">
-                        <TextBlock Text="трансурановые радионуклиды"/>
-                    </Border>
-                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="14">
-                        <TextBlock Text="код РАО"/>
-                    </Border>
-                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="15">
-                        <TextBlock Text="статус РАО"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="16">
-                        <TextBlock Text="объем без упаковки, куб.м"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="17">
-                        <TextBlock Text="масса без упаковки (нетто), т"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="18">
-                        <TextBlock Text="ОЗИИИ, шт."/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="19">
-                        <TextBlock Text="тритий"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="20">
-                        <TextBlock Text="бета-, гамма- излучающие радионуклиды (исключая тритий)"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="21">
-                        <TextBlock Text="альфа-излучающие радионуклиды (исключая трансурановые)"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="22">
-                        <TextBlock Text="трансурановые радионуклиды"/>
+                        <TextBlock Text="бета-, гамма-излучающих нуклидов"/>
                     </Border>
 
                     <!--#endregion Второй уровень заголовков-->
