--- a/Client_App/Views/Forms/Forms2/Form_210.axaml
+++ b/Client_App/Views/Forms/Forms2/Form_210.axaml
@@ -233,127 +233,81 @@
 
                     <Border
                         Grid.Row="0"
-                        Grid.RowSpan="3"
+                        Grid.RowSpan="2"
                         Grid.Column="0">
                         <TextBlock Text="№ п/п"/>
                     </Border>
                     <Border
                         Grid.Row="0"
+                        Grid.Column="6"
+                        Grid.ColumnSpan="2">
+                        <TextBlock Text="Мощность дозы гамма-излучения, мк3в/час"/>
+                    </Border>
+                    <Border
+                        Grid.Row="0"
+                        Grid.Column="8"
+                        Grid.ColumnSpan="2">
+                        <TextBlock Text="Плотность загязнения (средняя), Бк/кв. м"/>
+                    </Border>
+
+                    <!--#endregion Второй уровень заголовков-->
+
+                    <Border
+                        Grid.Row="0"
                         Grid.RowSpan="2"
-                        Grid.Column="1"
-                        Grid.ColumnSpan="4">
-                        <TextBlock Text="Установки переработки"/>
+                        Grid.Column="1">
+                        <TextBlock Text="Наименование показателя"/>
                     </Border>
-                    <Border
+					<Border
                         Grid.Row="0"
-                        Grid.Column="5"
-                        Grid.ColumnSpan="9">
-                        <TextBlock Text="Поступило РАО на переработку, кондиционирование"/>
+                        Grid.RowSpan="2"
+                        Grid.Column="2">
+                        <TextBlock Text="Наименование участка"/>
                     </Border>
-                    <Border
+					<Border
                         Grid.Row="0"
-                        Grid.Column="14"
-                        Grid.ColumnSpan="9">
-                        <TextBlock Text="Образовалось РАО после переработки, кондиционирования"/>
-                    </Border>
-
-                    <!--#endregion Второй уровень заголовков-->
-
-                    <Border
-                        Grid.Row="1"
-                        Grid.Column="7"
-                        Grid.ColumnSpan="3">
-                        <TextBlock Text="количество"/>
+                        Grid.RowSpan="2"
+                        Grid.Column="3">
+                        <TextBlock Text="Кадастровый номер участка"/>
                     </Border>
 					<Border
-                        Grid.Row="1"
-                        Grid.Column="10"
-                        Grid.ColumnSpan="4">
-                        <TextBlock Text="Суммарная активность, Бк"/>
+                        Grid.Row="0"
+                        Grid.RowSpan="2"
+                        Grid.Column="4">
+                        <TextBlock Text="Код участка"/>
                     </Border>
 					<Border
-                        Grid.Row="1"
-                        Grid.Column="16"
-                        Grid.ColumnSpan="3">
-                        <TextBlock Text="количество"/>
-                    </Border>
+                        Grid.Row="0"
+                        Grid.RowSpan="2"
+                        Grid.Column="5">
+						<TextBlock Text="Площадь загрязненной территории, кв.м"/>
+					</Border>
 					<Border
                         Grid.Row="1"
-                        Grid.Column="19"
-                        Grid.ColumnSpan="4">
-                        <TextBlock Text="суммарная активность, Бк"/>
-                    </Border>
-                    <!--#region Третий уровень заголовков-->
-
-                    <Border Grid.Row="2" Grid.Column="1">
-                        <TextBlock Text="наименование"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="2">
-                        <TextBlock Text="код"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="3">
-                        <TextBlock Text="мощность, куб. м/год"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="4">
-                        <TextBlock Text="количество часов работы за год"/>
-                    </Border>
-                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="5">
-                        <TextBlock Text="код РАО"/>
-                    </Border>
-                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="6">
-                        <TextBlock Text="статус РАО"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="7">
-                        <TextBlock Text="объем без упаковки, куб. м"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="8">
-                        <TextBlock Text="масса без упаковки (нетто), т"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="9">
-                        <TextBlock Text="ОЗИИИ, шт"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="10">
-                        <TextBlock Text="тритий"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="11">
-                        <TextBlock Text="бета-, гамма-излучающие радионуклиды (исключая тритий)"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="12">
-                        <TextBlock Text="альфа-излучающие радионуклиды (исключая трансурановые)"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="13">
-                        <TextBlock Text="трансурановые радионуклиды"/>
-                    </Border>
-                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="14">
-                        <TextBlock Text="код РАО"/>
-                    </Border>
-                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="15">
-                        <TextBlock Text="статус РАО"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="16">
-                        <TextBlock Text="объем без упаковки, куб.м"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="17">
-                        <TextBlock Text="масса без упаковки (нетто), т"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="18">
-                        <TextBlock Text="ОЗИИИ, шт."/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="19">
-                        <TextBlock Text="тритий"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="20">
-                        <TextBlock Text="бета-, гамма- излучающие радионуклиды (исключая тритий)"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="21">
-                        <TextBlock Text="альфа-излучающие радионуклиды (исключая трансурановые)"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="22">
-                        <TextBlock Text="трансурановые радионуклиды"/>
-                    </Border>
-
-                    <!--#endregion Второй уровень заголовков-->
-
+                        Grid.Column="6">
+						<TextBlock Text="средняя"/>
+					</Border>
+					<Border
+                        Grid.Row="1"
+                        Grid.Column="7">
+						<TextBlock Text="максимальная"/>
+					</Border>
+					<Border
+                        Grid.Row="1"
+                        Grid.Column="8">
+						<TextBlock Text="альфа-излучающие радионуклиды"/>
+					</Border>
+					<Border
+                        Grid.Row="1"
+                        Grid.Column="9">
+						<TextBlock Text="бета-излучающие радионуклиды"/>
+					</Border>
+					<Border
+                        Grid.Row="0"
+                        Grid.RowSpan="2"
+                        Grid.Column="10">
+						<TextBlock Text="Номер мероприятия ФЦП"/>
+					</Border>
                 </Grid>
 
                 <!--#endregion Заголовки таблицы-->
