--- a/Client_App/Views/Forms/Forms2/Form_211.axaml
+++ b/Client_App/Views/Forms/Forms2/Form_211.axaml
@@ -229,7 +229,7 @@
                         <local:ColumnWidthSyncBehavior SourceDataGrid="{Binding ElementName=dataGrid}" />
                     </interactivity:Interaction.Behaviors>
 
-                    <!--#region Первый уровень заголовков-->
+                    <!--Первый уровень заголовков-->
 
                     <Border
                         Grid.Row="0"
@@ -239,120 +239,68 @@
                     </Border>
                     <Border
                         Grid.Row="0"
-                        Grid.RowSpan="2"
-                        Grid.Column="1"
-                        Grid.ColumnSpan="4">
-                        <TextBlock Text="Установки переработки"/>
+                        Grid.Column="6"
+                        Grid.ColumnSpan="3">
+                        <TextBlock Text="Удельная активность радионуклида, Бк/г"/>
                     </Border>
-                    <Border
-                        Grid.Row="0"
-                        Grid.Column="5"
-                        Grid.ColumnSpan="9">
-                        <TextBlock Text="Поступило РАО на переработку, кондиционирование"/>
-                    </Border>
-                    <Border
-                        Grid.Row="0"
-                        Grid.Column="14"
-                        Grid.ColumnSpan="9">
-                        <TextBlock Text="Образовалось РАО после переработки, кондиционирования"/>
-                    </Border>
+					<!--Второй уровень заголовков-->
 
-                    <!--#endregion Второй уровень заголовков-->
-
-                    <Border
+					<Border
                         Grid.Row="1"
                         Grid.Column="7"
-                        Grid.ColumnSpan="3">
-                        <TextBlock Text="количество"/>
-                    </Border>
-					<Border
-                        Grid.Row="1"
-                        Grid.Column="10"
-                        Grid.ColumnSpan="4">
-                        <TextBlock Text="Суммарная активность, Бк"/>
-                    </Border>
-					<Border
-                        Grid.Row="1"
-                        Grid.Column="16"
-                        Grid.ColumnSpan="3">
-                        <TextBlock Text="количество"/>
-                    </Border>
-					<Border
-                        Grid.Row="1"
-                        Grid.Column="19"
-                        Grid.ColumnSpan="4">
-                        <TextBlock Text="суммарная активность, Бк"/>
-                    </Border>
-                    <!--#region Третий уровень заголовков-->
+                        Grid.ColumnSpan="2">
+						<TextBlock Text="водный объект"/>
+					</Border>
+					
+                    <!--Третий уровень заголовков-->
 
-                    <Border Grid.Row="2" Grid.Column="1">
-                        <TextBlock Text="наименование"/>
+                    <Border
+                        Grid.Row="0"
+						Grid.RowSpan="3"
+                        Grid.Column="1">
+                        <TextBlock Text="Наименование участка"/>
                     </Border>
-                    <Border Grid.Row="2" Grid.Column="2">
-                        <TextBlock Text="код"/>
+					<Border
+                        Grid.Row="0"
+						Grid.RowSpan="3"
+                        Grid.Column="2">
+                        <TextBlock Text="Кадастровый номер участка"/>
                     </Border>
-                    <Border Grid.Row="2" Grid.Column="3">
-                        <TextBlock Text="мощность, куб. м/год"/>
+					<Border
+                        Grid.Row="0"
+						Grid.RowSpan="3"
+                        Grid.Column="3">
+                        <TextBlock Text="Код участка"/>
                     </Border>
-                    <Border Grid.Row="2" Grid.Column="4">
-                        <TextBlock Text="количество часов работы за год"/>
+					<Border
+                        Grid.Row="0"
+						Grid.RowSpan="3"
+                        Grid.Column="4">
+                        <TextBlock Text="Площадь загрязненной территории, кв. м"/>
                     </Border>
-                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="5">
-                        <TextBlock Text="код РАО"/>
-                    </Border>
-                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="6">
-                        <TextBlock Text="статус РАО"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="7">
-                        <TextBlock Text="объем без упаковки, куб. м"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="8">
-                        <TextBlock Text="масса без упаковки (нетто), т"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="9">
-                        <TextBlock Text="ОЗИИИ, шт"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="10">
-                        <TextBlock Text="тритий"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="11">
-                        <TextBlock Text="бета-, гамма-излучающие радионуклиды (исключая тритий)"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="12">
-                        <TextBlock Text="альфа-излучающие радионуклиды (исключая трансурановые)"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="13">
-                        <TextBlock Text="трансурановые радионуклиды"/>
-                    </Border>
-                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="14">
-                        <TextBlock Text="код РАО"/>
-                    </Border>
-                    <Border Grid.Row="1" Grid.RowSpan="2" Grid.Column="15">
-                        <TextBlock Text="статус РАО"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="16">
-                        <TextBlock Text="объем без упаковки, куб.м"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="17">
-                        <TextBlock Text="масса без упаковки (нетто), т"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="18">
-                        <TextBlock Text="ОЗИИИ, шт."/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="19">
-                        <TextBlock Text="тритий"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="20">
-                        <TextBlock Text="бета-, гамма- излучающие радионуклиды (исключая тритий)"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="21">
-                        <TextBlock Text="альфа-излучающие радионуклиды (исключая трансурановые)"/>
-                    </Border>
-                    <Border Grid.Row="2" Grid.Column="22">
-                        <TextBlock Text="трансурановые радионуклиды"/>
-                    </Border>
+					<Border
+                        Grid.Row="0"
+						Grid.RowSpan="3"
+                        Grid.Column="5">
+						<TextBlock Text="Наименование радионуклида"/>
+					</Border>
+					<Border
+                        Grid.Row="1"
+						Grid.RowSpan="2"
+                        Grid.Column="6">
+						<TextBlock Text="земельный участок"/>
+					</Border>
+					<Border
+                        Grid.Row="2"
+                        Grid.Column="7">
+						<TextBlock Text="жидкая фаза"/>
+					</Border>
 
-                    <!--#endregion Второй уровень заголовков-->
+					<Border
+                        Grid.Row="2"
+                        Grid.Column="8">
+						<TextBlock Text="донные отложения"/>
+					</Border>
 
                 </Grid>
 
