--- a/Client_App/Views/Forms/Forms2/Form_26.axaml
+++ b/Client_App/Views/Forms/Forms2/Form_26.axaml
@@ -91,8 +91,12 @@
                                 Command="{Binding SaveReport}"
                                 Content="Сохранить" />
                         </StackPanel>
-
-                    </Grid>
+						<StackPanel Grid.Row="4" Orientation="Horizontal">
+							<TextBlock Margin="5,10" Text="Количество наблюдательных скважин, принадлежащих организации:"/>
+							<TextBox  Text ="{Binding Report.SourcesQuantity26.Value}"/>
+							<TextBlock Margin="5,10" Text="шт."/>
+						</StackPanel>
+					</Grid>
                 </Border>
 
 				<Border Classes="borderContainer">
